# Prog-Rust_GIT

./: .gitignore  Nouveau document texte (2).txt  Nouveau document texte.txt  curl.txt  daemon.txt  git_rip-grep.txt  maj&patch.txt  recherche.txt  rep.txt  time.txt
capturing/: Cargo.toml
capturing/src/: lib.rs  main.rs
daemon/: Cargo.toml
daemon/src/: main.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
list_txt/: Cargo.toml
list_txt/src/: lib.rs  main.rs
log_analysis/: Cargo.toml
log_analysis/src/: grep.rs  lib.rs  main.rs
log_analysis/src/files_handling/: untar.rs
log_analysis_server_side/: Cargo.toml
log_analysis_server_side/src/: files_handling.rs  grep.rs  main.rs
log_analysis_server_side/src/files_handling/: untar.rs
minigrep/: Cargo.toml
minigrep/log/: error.txt
minigrep/src/: lib.rs
server_log_analysis/: Cargo.toml
server_log_analysis/src/: lib.rs  main.rs
server_log_analysis/src/files_handling/: list_files_log.rs
test-warp/: Cargo.toml  main.rs
test-warp/src/: main.rs
test_13/: Cargo.toml
test_13/src/: main.rs
untar_log/: Cargo.toml
untar_log/src/: lib.rs  main.rs
