[package]
name = "daemon"
version = "0.1.0"
authors = ["alexandre fournier <alexandre.fournier@etu.univ-poitiers.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enclose = "1.1.8"
jsonrpc-core = "15.1.0"
jsonrpc-http-server = "15.1.0"
serde = { version = "1.0", features = ["derive"] }