[package]
name = "test-warp"
version = "0.1.0"
authors = ["alexandre fournier <alexandre.fournier@etu.univ-poitiers.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.2", features = ["macros", "rt-multi-thread", "fs"] }
warp = "0.3.1"
uuid = { version = "0.8.2", features = ["v4"] }
futures = { version = "=0.3.15", default-features = false }
bytes = "1.0.1"